--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
 # *********************
 # KEYS de APIs
-OPENAI_API_KEY=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
+OPENAI_API_KEY=
+OPENAI_API_KEY_PROD=
+SECRET_KEY_TEST=
+REDIS_URL=
+REDIS_PORT=
+REDIS_USERNAME=
+REDIS_PASSWORD=
