almacenar embeddings en redis, y comenzar con query

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,12 @@ REDIS_URL=
 REDIS_PORT=
 REDIS_USERNAME=
 REDIS_PASSWORD=
+
+LANGFUSE_SECRET_KEY=
+LANGFUSE_PUBLIC_KEY=
+LANGFUSE_HOST=
+
+URL_1=
+URL_2=
+
+EMBEDDING_MODEL=
