--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Carlos Alvarez"}
 ]
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.11,<4.0"
 dependencies = [
     "langgraph (>=0.6.1,<0.7.0)",
     "langchain-openai (>=0.3.28,<0.4.0)",
@@ -16,7 +16,8 @@ dependencies = [
     "langchain-community (>=0.3.27,<0.4.0)",
     "beautifulsoup4 (>=4.13.4,<5.0.0)",
     "faiss-cpu (>=1.11.0.post1,<2.0.0)",
-    "python-decouple (>=3.8,<4.0)"
+    "python-decouple (>=3.8,<4.0)",
+    "langfuse (>=3.2.1,<4.0.0)"
 ]
 
 
