Ingest a base chroma
Creación de models y nodes para ingest a una base de datos chroma persistente

--- a/.env.template
+++ b/.env.template
@@ -31,6 +31,10 @@ TAVILY=
 # *********************
 # Configuración de la base de datos
 # *********************
+CHROMA_PATH=code/data/
+CHROMA_DB=chroma_db
+CHROMA_COLLECTION=test_rsm
+
 PGSQL_HOST=pgvector.allgest.cl
 PGSQL_PORT=5004
 PGSQL_USER=
