Langfuse y log funcionando
Se creó rutinas de langfuse para trace en la nube y log en local.

--- a/.env.template
+++ b/.env.template
@@ -2,7 +2,7 @@
 # Configuración de la aplicación
 # *********************
 SECRET_KEY_APP=
-SECRET_APP=
+SECRET_APP=TEST_RSM
 
 URL_1=https://allendowney.github.io/ThinkPython/index.html
 URL_2=https://peps.python.org/pep-0008/
@@ -16,11 +16,20 @@ OPENAI_API_KEY_PROD=
 
 GITHUB_TOKEN_PAT=
 
+# EMBEDDING_MODEL=all-mpnet-base-v2
 EMBEDDING_MODEL=text-embedding-ada-002
 MODEL_TO_USE=gpt-4.1-nano
 MODEL_BEST=gpt-4.1-mini
 MODEL_SUPER=gpt-4.1
 
+# *********************
+# Configuración de LangSmith
+LANGSMITH_TRACING=true
+LANGSMITH_ENDPOINT=https://api.smith.langchain.com
+LANGSMITH_API_KEY=
+LANGSMITH_PROJECT=test_rsm
+
+# *********************
 
 LANGCHAIN_API_KEY=
 GROQ_API_KEY=
@@ -32,18 +41,19 @@ TAVILY=
 # Configuración de la base de datos
 # *********************
 CHROMA_PATH=code/data/
-CHROMA_DB=chroma_db
-CHROMA_COLLECTION=test_rsm
+CHROMA_DB=test_chroma_db
+CHROMA_COLLECTION=test_collection
 
-PGSQL_HOST=pgvector.allgest.cl
+
+PGSQL_HOST=
 PGSQL_PORT=5004
 PGSQL_USER=
 PGSQL_PASSWORD=
 PGSQL_DATABASE=vector
 
 REDIS_URL=
-REDIS_PORT=
-REDIS_USERNAME=
+REDIS_PORT=19786
+REDIS_USERNAME=default
 REDIS_PASSWORD=
 
 QDRANT_URL=http://qdrant.allgest.cl:6333
