--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 services:
   web:
     container_name: test_rsm
-    image: test_rsm_api:v1
+    image: rsm/fastapi-test:latest
     restart: unless-stopped
     ports:
       - 7103:7103
